# Vulkan-Rendering-Engine

./: .gitignore  Cargo.toml  README.md  script.py
shaders/: compile.sh
shaders/egui/: egui.frag  egui.vert  egui_frag.spv  egui_vert.spv
shaders/vertex_simple/: shader.frag  shader.vert
shaders/voxel/: frag.spv  shader.frag  shader.vert  vert.spv
src/: app.rs  app_data.rs  buffers.rs  camera.rs  chunk.rs  chunk_manager.rs  chunk_rendering.rs  chunkmesher.rs  commands.rs  constants.rs  descriptors.rs  device.rs  gamestate.rs  gui.rs  images.rs  input.rs  instance.rs  load_models.rs  main.rs  metrics.rs  pipeline.rs  swapchain.rs  terrain_generator.rs  textures.rs  utils.rs  vertex.rs  voxel.rs
