[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.28.0", features = ["libloading", "provisional", "window"] }
winit = "0.30"
egui = "0.33.3"
egui-winit = "0.33.3"
bytemuck = "1.25.0"
glam = {version = "0.32.1", features = ["bytemuck"]}
rand = "0.10.1"
